updated resume and improved navbar

--- a/modules/ResumeApp/client/css/ResumeApp.import.css
+++ b/modules/ResumeApp/client/css/ResumeApp.import.css
@@ -1,4 +1,3 @@
-/* CSS declarations go here */
 body {
   font-family: sans-serif;
   position: absolute;
@@ -11,37 +10,20 @@ body {
   margin: 0;
 
   font-size: 14px;
-}
-
-.container {
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
-  width: 100%;
-}
-
-.main{
-  padding-top: 35px;
-  padding-bottom: 40px;
-}
-
-.nav-wrapper, .list-wrapper{
-  width: 1060px;
-  margin: 0 auto;
-}
-
-.navbar-default{
-  margin-bottom: 0px;
+  padding-top: 60px;
 }
 
 .panel-default{
   border: 0;
 }
 
+.panel-wrapper .panel{
+  margin: 0;
+}
+
 .panel-default .panel-heading{
   background: white;
   border: 0;
-  padding-top: 40px;
 }
 
 .panel-title{
@@ -58,10 +40,6 @@ body {
   margin-top: -60px;
 }
 
-.panel-wrapper{
-  margin-top: -40px;
-}
-
 .panel-heading .panel-title{
   border: 0;
   background: white;
@@ -75,6 +53,10 @@ body {
   text-decoration: none;
 }
 
+b, p{
+  display: inline;
+}
+
 #banner-info{
   text-align: center;
   padding: 0px;
@@ -82,11 +64,9 @@ body {
   padding: 10px;
   background-color: white;
   font-size: 16px;
-  position: fixed;
-  bottom: 0;
   width: 100%;
 }
 
-b, p{
-  display: inline;
+.list-wrapper{
+  margin-top: -30px;
 }
